--- a/latest/package.json
+++ b/latest/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "devDependencies": {
     "@subwaytime/eslint-config": "^0.0.11",
-    "bun-types": "latest"
+    "bun-types": "^1.0.1"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
